# mise

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  DESIGN.md  LEARNINGS.md  LICENSE  README.md  SESSIONS.md  TODO.md  render.yaml  trip_planning_feature_plan.md  wardrobe-ai-project-outline.md
backend/: auth.py  main.py  observability.py  pyproject.toml  requirements.txt  schemas.py  test_feedback_token.py  test_sampling.py  test_validation.py  test_weather.py
backend/db/: supabase.py
backend/evals/: __init__.py  diversity_report.py  eval_recommend.py  eval_trip.py  prompt_versions.md  recommend_scorers.py  scorers.py
backend/evals/datasets/: recommend.json  trips.json
backend/evals/reports/diversity/: 2026-07-09.md
backend/mcp_server/: demo_client.py  demo_client_http.py  demo_langgraph_agent.py  shopping_server.py
backend/routers/: clothes.py  feedback.py  geo.py  outfits.py  profile.py  trips.py
backend/scripts/: bbox_experiment.py  export_replay_trace.py
backend/services/: calendar.py  categories.py  claude.py  email.py  email_template.py  feedback_token.py  image.py  modes.py  outfit_history.py  outfit_refine.py  preference_inference.py  recommend.py  search.py  stats.py  storage.py  trip_planner.py  validation.py  weather.py  weather_gate.py
backend/sql/: 2026-06-02_outfit_history.sql  2026-06-09_outfit_feedback.sql  2026-06-10_clothing_warmth.sql  2026-06-12_feedback_attribution.sql  2026-06-12_profile_preferences.sql  2026-06-13_preferences_reviewed_at.sql  2026-06-26_shopping_department.sql  2026-07-03_llm_usage.sql  2026-07-05_trip_plan_name.sql  2026-07-05_trip_plans.sql  2026-07-09_outfit_config.sql
backend/tests/: conftest.py  test_attribution.py  test_bbox_crops.py  test_calendar.py  test_candidates.py  test_config_fingerprint.py  test_eval_scorers.py  test_feedback_context.py  test_feedback_token.py  test_graph.py  test_llm_usage.py  test_multi_tagging.py  test_outfit_refine.py  test_parse_json.py  test_preference_inference.py  test_preferences.py  test_recent_picks.py  test_recommend_scorers.py  test_sampling.py  test_search.py  test_stats.py  test_sweep_orphaned_photos.py  test_trips_saving.py  test_upload_tagging.py  test_validation.py  test_weather.py  test_weather_gate.py
backend/tests/fixtures/: calendar.ics
docs/: daily-email.md  deploy.md  feedback-loop-design.md  migrations.md  (+3 more)
(+45 files in other folders)
