[project]
name = "wardrobe-ai-backend"
version = "0.1.0"
description = "FastAPI backend for Wardrobe AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "python-multipart>=0.0.12",
    "supabase>=2.9",
    "anthropic>=0.39",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pillow>=10.4",
    "pillow-heif>=0.18",
    "langgraph>=1.1.10",
    "tzdata>=2024.1",
    "icalendar>=7.1.2",
    "recurring-ical-events>=3.8.2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
