[project]
name = "wardrobe-ai-backend"
version = "0.1.0"
description = "FastAPI backend for Wardrobe AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "python-multipart>=0.0.12",
    "supabase>=2.9",
    "anthropic>=0.39",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pillow>=10.4",
    "pillow-heif>=0.18",
    "langgraph>=1.1.10",
    "tzdata>=2024.1",
    "icalendar>=7.1.2",
    "recurring-ical-events>=3.8.2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "mcp[cli]>=1.28.1",
    "pytest>=9.0.3",
    # Weave observability (#85) — trace-only, never shipped to Render. It is
    # deliberately NOT in requirements.txt (Render's prod dep list) nor in
    # [project.dependencies], keeping it off the request/cron hot path.
    "weave>=0.53",
]

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"
honor_noqa = true
known_first_party = [
    "auth",
    "daily_outfit",
    "db",
    "observability",
    "routers",
    "schemas",
    "services",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
